# Reviews-And-Notes-Books

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
books/2010-Speck-WCHDCSAOSAAT/: review.md
books/CEWS_2006/: review.md
books/CFP_2024/: review.md
books/EOS_2016/: notes.md
books/cews2006/: notes.md  review.md
books/cfp2024/: notes.md  review.md
books/eos2016/: review.md
